# gpuidrive

./: .gitignore  Cargo.toml  README.md
demo/: Cargo.toml
gpuidrive/: Cargo.toml
gpuidrive/src/: assets.rs  components.rs  data_table.rs  input.rs  main.rs  state.rs  window.rs
gpuidrive/src/components/: button.rs  data_table.rs  icon.rs  path_bar.rs  preview.rs  quick_preview.rs  table_row.rs  text_input.rs
indexer/: Cargo.toml
indexer/src/: main.rs
