[package]
name = "gpuidrive"
authors = ["Oscar Beaumont <oscar@otbeaumont.me>"]
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata.packager]
before-packaging-command = "cargo build --release"

[dependencies]
# TODO: Lock to commit
gpui = { git = "https://github.com/zed-industries/zed", rev = "5f9c91d05a137e6db2e398fc3fabedeb9ed82b00" }
reqwest_client = { git = "https://github.com/zed-industries/zed", rev = "5f9c91d05a137e6db2e398fc3fabedeb9ed82b00" }
anyhow = "1.0.98"
env_logger = "0.11.8"
futures = "0.3.31"
rand = "0.9.1"
unicode-segmentation = "1.12.0"
chrono = "0.4.40"
